--- a/app/components/sheet-creation/sheet-creation.html
+++ b/app/components/sheet-creation/sheet-creation.html
@@ -128,26 +128,30 @@
                 type: Object,
                 notify: true,
                 reflectToAttribute: true
+            },
+            routeElement: {
+                type: Object
             }
         },
         observers: [
-            '_modelUpdated(creatingSheet.*)'
+            "_modelUpdated(creatingSheet.*)"
         ],
         ready: function(e){
             console.log("Sheet Creation Loaded");
+            this.routeElement = document.querySelector("dungeon-dices");
         },
         attached: function(e){
             this.dialogFit = document.querySelector("#pagesMainContent");
         },
         _modelUpdated: function(e){
-            console.log('Model Update');
+            console.log("Model Update");
             console.log(this.creatingSheet);
         },
         openSaveSheetDialog: function(e){
             document.querySelector("#openSaveSheetDialog").open();
         },
         saveSheet: function(e){
-            console.log('Saving Sheet');
+            console.log("Saving Sheet");
             // Need to Verify  Each Status, Resource, Defense and Skill and SUM
             var scAtt = this;
             // SUM Status = baseValue + (levelModifier * level)
@@ -168,9 +172,9 @@
                                 }
                             ).indexOf(resource.statusBase)
                         ].value;
-                        resource.value = parseInt(resource.baseValue) + (parseFloat(resource.statusBaseModifier) * parseInt(baseStatusValue)) + (parseFloat(resource.levelModifier) * parseInt(scAtt.creatingSheet.level));
+                        resource.value = parseInt(parseInt(resource.baseValue) + (parseFloat(resource.statusBaseModifier) * parseInt(baseStatusValue)) + (parseFloat(resource.levelModifier) * parseInt(scAtt.creatingSheet.level)));
                     } else{
-                        resource.value = parseInt(resource.baseValue) + (parseFloat(resource.levelModifier) * parseInt(scAtt.creatingSheet.level));
+                        resource.value = parseInt(parseInt(resource.baseValue) + (parseFloat(resource.levelModifier) * parseInt(scAtt.creatingSheet.level)));
                     }
                 }
             );
@@ -187,9 +191,9 @@
                             ).indexOf(defense.statusBase)
                         ].value;
 
-                        defense.value = parseInt(defense.baseValue) + (parseFloat(defense.statusBaseModifier) * parseInt(baseStatusValue)) + (parseFloat(defense.levelModifier) * parseInt(scAtt.creatingSheet.level));
+                        defense.value = parseInt(parseInt(defense.baseValue) + (parseFloat(defense.statusBaseModifier) * parseInt(baseStatusValue)) + (parseFloat(defense.levelModifier) * parseInt(scAtt.creatingSheet.level)));
                     } else{
-                        defense.value = parseInt(defense.baseValue) + (parseFloat(defense.levelModifier) * parseInt(scAtt.creatingSheet.level));
+                        defense.value = parseInt(parseInt(defense.baseValue) + (parseFloat(defense.levelModifier) * parseInt(scAtt.creatingSheet.level)));
                     }
                 }
             );
@@ -206,19 +210,19 @@
                             ).indexOf(skill.statusBase)
                         ].value;
 
-                        skill.value = parseInt(skill.baseValue) + (parseFloat(skill.statusBaseModifier) * parseInt(baseStatusValue)) + (parseFloat(skill.levelModifier) * parseInt(scAtt.creatingSheet.level));
+                        skill.value = parseInt(parseInt(skill.baseValue) + (parseFloat(skill.statusBaseModifier) * parseInt(baseStatusValue)) + (parseFloat(skill.levelModifier) * parseInt(scAtt.creatingSheet.level)));
                     } else{
-                        skill.value = parseInt(skill.baseValue) + (parseFloat(skill.levelModifier) * parseInt(scAtt.creatingSheet.level));
+                        skill.value = parseInt(parseInt(skill.baseValue) + (parseFloat(skill.levelModifier) * parseInt(scAtt.creatingSheet.level)));
                     }
                 }
             );
             // Pushing to SheetList and Cleaning the CreatingSheet
             this.push("sheetList", this.creatingSheet);
             this.set("creatingSheet", this.baseSheet);
-            console.log('Sheet Saved');
+            console.log("Sheet Saved");
             console.log("Route to SheetList");
-            this.set('route.path', '/home');
-            this.page = 'home';
+            this.routeElement.set("route.path", "/home");
+            this.routeElement.set("page", "home");
         }
     });
 </script>
