--- a/app/components/sheet-creation/sheet-creation.html
+++ b/app/components/sheet-creation/sheet-creation.html
@@ -24,7 +24,7 @@
             }
 
             #save-sheet {
-                position: fixed;
+                position: absolute;
                 right: 16px;
                 top: 120px;
                 z-index: 1;
