--- a/app/components/sheet-creation/status-tab.html
+++ b/app/components/sheet-creation/status-tab.html
@@ -10,7 +10,7 @@
             }
 
             #add-status {
-                position: fixed;
+                position: absolute;
                 bottom: 16px;
                 right: 16px;
             }
