--- a/app/components/sheet-detail/basic-card.html
+++ b/app/components/sheet-detail/basic-card.html
@@ -22,7 +22,7 @@
             }
         </style>
 
-        <paper-card>
+        <paper-card  heading="Basic">
             <div class="card-content">
                 <div class="card-content-row">
                     <p>Name:</p><p>{{ name }}</p>
