--- a/app/components/sheet-detail/sheet-detail.html
+++ b/app/components/sheet-detail/sheet-detail.html
@@ -6,6 +6,10 @@
             :host {
                 width: 100%;
             }
+
+            #space {
+                height: 64px;
+            }
         </style>
 
         <basic-card name="{{ sheet.name }}"
@@ -22,6 +26,8 @@
         <skillslist-card skills-list="{{ sheet.skillsList }}"></skillslist-card>
 
         <!-- Buff / Debuff List Card -->
+
+        <div id="#space"></div>
     </template>
 </dom-module>
 
