--- a/app/components/main/sheet-list.html
+++ b/app/components/main/sheet-list.html
@@ -19,7 +19,7 @@
             }
 
             #add-sheet {
-                position: fixed;
+                position: absolute;
                 bottom: 16px;
                 right: 16px;
             }
