--- a/app/components/sheet-detail/defenseslist-card.html
+++ b/app/components/sheet-detail/defenseslist-card.html
@@ -22,7 +22,7 @@
             }
         </style>
 
-        <paper-card>
+        <paper-card  heading="Defenses">
             <div class="card-content">
                 <template is="dom-repeat"
                           items="{{ defensesList }}">
