--- a/app/components/main/sheet-card.html
+++ b/app/components/main/sheet-card.html
@@ -22,6 +22,13 @@
             }
         </style>
 
+        <app-location use-hash-as-path
+                      route="{{ route }}"></app-location>
+
+        <app-route route="{{ route }}"
+                   pattern="/:page"
+                   data="{{ dataRoute }}"></app-route>
+
         <paper-card on-click="openSheet">
             <div class="card-content">
                 <div class="card-content-row">
