--- a/app/components/sheet-detail/detail-basic-card.html
+++ b/app/components/sheet-detail/detail-basic-card.html
@@ -1,6 +1,6 @@
 <!--link href="../assets/bower_components/polymer/polymer.html" rel="import"-->
 
-<dom-module id="basic-card">
+<dom-module id="detail-basic-card">
     <template>
         <style>
             :host {
@@ -43,7 +43,7 @@
 
 <script>
     Polymer({
-        is: "basic-card",
+        is: "detail-basic-card",
         properties: {
             name: {
                 type: Object
