--- a/app/components/sheet-detail/detail-resorces-card.html
+++ b/app/components/sheet-detail/detail-resorces-card.html
@@ -1,6 +1,6 @@
 <!--link href="../assets/bower_components/polymer/polymer.html" rel="import"-->
 
-<dom-module id="resorceslist-card">
+<dom-module id="detail-resorces-card">
     <template>
         <style>
             :host {
@@ -37,7 +37,7 @@
 
 <script>
     Polymer({
-        is: "resorceslist-card",
+        is: "detail-resorces-card",
         properties: {
             resorcesList: {
                 type: Object
