--- a/app/components/sheet-detail/detail-status-card.html
+++ b/app/components/sheet-detail/detail-status-card.html
@@ -1,6 +1,6 @@
 <!--link href="../assets/bower_components/polymer/polymer.html" rel="import"-->
 
-<dom-module id="statuslist-card">
+<dom-module id="detail-status-card">
     <template>
         <style>
             :host {
@@ -37,7 +37,7 @@
 
 <script>
     Polymer({
-        is: "statuslist-card",
+        is: "detail-status-card",
         properties: {
             statusList: {
                 type: Object
