--- a/app/components/sheet-detail/detail-defenses-card.html
+++ b/app/components/sheet-detail/detail-defenses-card.html
@@ -1,6 +1,6 @@
 <!--link href="../assets/bower_components/polymer/polymer.html" rel="import"-->
 
-<dom-module id="defenseslist-card">
+<dom-module id="detail-defenses-card">
     <template>
         <style>
             :host {
@@ -37,7 +37,7 @@
 
 <script>
     Polymer({
-        is: "defenseslist-card",
+        is: "detail-defenses-card",
         properties: {
             defensesList: {
                 type: Object
