Edit Sheet Button

--- a/app/components/sheet-detail/sheet-detail.html
+++ b/app/components/sheet-detail/sheet-detail.html
@@ -7,7 +7,7 @@
                 width: 100%;
             }
 
-            paper-menu-button {
+            #edit-sheet {
                 position: absolute;
                 right: 16px;
                 bottom: 16px;
@@ -44,7 +44,7 @@
         
         <paper-fab noink
                    icon="editor:mode-edit"
-                   id="add-sheet"
+                   id="edit-sheet"
                    on-click="editSheet"></paper-fab>
     </template>
 </dom-module>
